fixed the alignment of twitter icons

--- a/style.css
+++ b/style.css
@@ -389,12 +389,10 @@ ul.modal-list {
 }
 
 .footerButton {
-    display: flex;
-    align-items:center;
     background-color: rgb(240, 233, 233);
     color: black;
     margin-top: 0.5rem;
-    padding: 0.5rem 1rem 0.5rem 0.5rem;
+    padding: 0.25rem 0.75rem 0.25rem 0.75rem;
     border-radius: 7px;
 }
 
@@ -431,6 +429,7 @@ b {
 #twitter {
   width: 2rem;
   padding-right: 0.5rem;
+  vertical-align: middle;
 }
 
 #redBackground {
